--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <!-- Disable Captcha -->
               <input type="hidden" name="_captcha" value="false">
 
-              <input type="hidden" name="_next" value="https://formsubmit.co/1d9e9d5aefd55e4e638b5f41e8c634bfsucces.html"> 
+              <input type="hidden" name="_next" value="https://formsubmit.co/1d9e9d5aefd55e4e638b5f41e8c634bf"> 
 
               <div class="md-3">
                 <label for="validationDefault01" class="form-label">Voornaam</label>
