--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
               <!-- Disable Captcha -->
               <input type="hidden" name="_captcha" value="false">
 
+              <input type="hidden" name="_next" value="https://b2q8.github.io/formsubmit/succes.html">
+
               <div class="md-3">
                 <label for="validationDefault01" class="form-label">Voornaam</label>
                 <input type="text" class="form-control" name="Voornaam" id="validationDefault01" required>
