--- a/succes.html
+++ b/succes.html
@@ -15,7 +15,7 @@
   <body>
     
     <div class="container">
-      <h1>Bereik ons!</h1>
+      <h1>Dankjewel!</h1>
       <p>Gelukt! We laten u zo snel mogelijk van ons horen.</p>
   
 </body>
