--- a/succes.html
+++ b/succes.html
@@ -15,8 +15,8 @@
   <body>
     
     <div class="container">
-      <h1>Gelukt!</h1>
-      <p>We laten u zo snel mogelijk van ons horen!</p>
+      <h1 class="text-center">Gelukt!</h1>
+      <p class="text-center">We laten u zo snel mogelijk van ons horen!</p>
   
 </body>
 </html>
