--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               </div>
               <div class="md-3">
                 <label for="validationDefault02" class="form-label">Achternaam</label>
-                <input type="text" class="form-control" name="Achternaam" name="Email" id="validationDefault02">
+                <input type="text" class="form-control" name="Achternaam" name="Email" id="validationDefault02" required>
               </div>
               <div class="md-3">
                 <label for="validationDefaultUsername" class="form-label">Email</label>
