--- a/succes.html
+++ b/succes.html
@@ -14,9 +14,10 @@
   </head>
   <body>
      
-    <div class="container">  
-      <h1 class="text-center" >Gelukt!</h1>
-      <p class="text-center" >We laten u zo snel mogelijk van ons horen!</p>
+    <div class="text-center" style="margin-top: 250px">
+      <h1>Gelukt!</h1>
+      <p>We laten u zo snel mogelijk van ons horen!</p>
+      <a href="index.html">Klik hier om terug naar de website te gaan.</a> 
   
 </body>
 </html>
