--- a/succes.html
+++ b/succes.html
@@ -17,7 +17,7 @@
     <div class="text-center" style="margin-top: 250px">
       <h1>Gelukt!</h1>
       <p>We laten u zo snel mogelijk van ons horen!</p>
-      <a href="index.html">Klik hier om terug naar de website te gaan.</a> 
+      <a href="google.nl">Klik hier om terug naar de website te gaan.</a> 
   
 </body>
 </html>
