--- a/succes.html
+++ b/succes.html
@@ -14,10 +14,11 @@
   </head>
   <body>
      
-    <div class="text-center" style="margin-top: 250px">
+    <div class="text-center">
       <h1>Gelukt!</h1>
       <p>We laten u zo snel mogelijk van ons horen!</p>
-      <a href="google.nl">Klik hier om terug naar de website te gaan.</a> 
+      <a href="index.html">Klik hier om terug naar de website te gaan.</a>
+    </div>
   
 </body>
 </html>
