--- a/succes.html
+++ b/succes.html
@@ -14,7 +14,7 @@
   </head>
   <body>
      
-    <div class="text-center">
+    <div class="text-center" style="margin-top: 250px">
       <h1>Gelukt!</h1>
       <p>We laten u zo snel mogelijk van ons horen!</p>
       <a href="index.html">Klik hier om terug naar de website te gaan.</a>
