--- a/succes.html
+++ b/succes.html
@@ -19,6 +19,15 @@
       <p>We laten u zo snel mogelijk van ons horen!</p>
       <a href="index.html">Klik hier om terug naar de website te gaan.</a>
     </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
   
 </body>
 </html>
+
+
+
