--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <!-- Disable Captcha -->
               <input type="hidden" name="_captcha" value="false">
 
-              <input type="hidden" name="_next" value="https://b2q8.github.io/formsubmit/succes.html">  
+              <input type="hidden" name="_next" value="http://127.0.0.1:5500/succes.html">  
 
               <div class="md-3">
                 <label for="validationDefault01" class="form-label">Voornaam</label>
